Add start_time and end_time query parameters to search API
