# api/routes/search.js
@@ -6,6 +6,8 @@ router.get('/:query', async (req, res) => {
 		const tweetsData = await twitterClient.tweets.tweetsRecentSearch({
 			'query': req.params.query,
 			'max_results': req.query.max_results ?? 10,
+			'start_time': req.query.start_time,
+			'end_time': req.query.end_time,
 			'tweet.fields': 'created_at',
 			'expansions': 'author_id,geo.place_id',
 			'user.fields': 'profile_image_url',
