# openapi.yaml
@@ -30,6 +30,18 @@ paths:
             type: integer
             minimum: 10
             maximum: 100
+        - name: start_time
+          in: query
+          description: The oldest UTC timestamp from which the Tweets will be provided.
+          schema:
+            type: string
+            format: date-time
+        - name: end_time
+          in: query
+          description: The newest, most recent UTC timestamp to which the Tweets will be provided.
+          schema:
+            type: string
+            format: date-time
       responses:
         '200':
           description: Successful operation
